--- a/ITPAssignment/My Project/Resources.resx
+++ b/ITPAssignment/My Project/Resources.resx
@@ -133,6 +133,9 @@
   <data name="ComputerRoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ComputerRoom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SplashScreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="get_item" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\get_item.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -153,9 +156,6 @@
   </data>
   <data name="smile_face_ascii" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\smile face ascii.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SplashScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashScreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StoreRoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StoreRoom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
