--- a/ITPAssignment/My Project/Resources.resx
+++ b/ITPAssignment/My Project/Resources.resx
@@ -127,7 +127,7 @@
   <data name="Bathroom2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bathroom2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bedroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Bedroom1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bedroom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ComputerRoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
